Fix contrast on order link

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,7 @@ body {
 :root {
 	--primary-bg-color: #d8a47f;
 	--text-color: #333333;
-	--link-color: #df3b57;
+	--link-color: #9E1A30;
 	--link-highlight-color: #ef8354;
 	--font-family: 'Inter', sans-serif;
 }
